// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Default should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "minHeight": 200,
      "padding": 24,
    }
  }
>
  <View
    accessibilityLabel="john.doe's avatar"
    accessible={true}
    style={
      [
        {
          "borderColor": "rgba(44,42,33,0.12)",
          "borderRadius": 37,
          "borderWidth": 0.5,
          "height": 120,
          "shadowColor": "#2C2A21",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.16,
          "shadowRadius": 4,
          "width": 120,
        },
        {
          "marginHorizontal": 10,
        },
      ]
    }
    testID="avatar"
  >
    <ViewManagerAdapter_ExpoImage
      borderColor={522988065}
      borderRadius={37}
      borderWidth={0.5}
      containerViewRef={{"current":"Object"}}
      contentFit="cover"
      contentPosition={
        {
          "left": "50%",
          "top": "50%",
        }
      }
      height={120}
      nativeViewRef={{"current":"NativeComponent"}}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      placeholder={[]}
      priority="high"
      shadowColor="#2C2A21"
      shadowOffset={
        {
          "height": 2,
          "width": 0,
        }
      }
      shadowOpacity={0.16}
      shadowRadius={4}
      source={
        [
          {
            "headers": undefined,
            "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=240",
          },
        ]
      }
      style={
        {
          "borderColor": "rgba(44,42,33,0.12)",
          "borderRadius": 37,
          "borderWidth": 0.5,
          "height": 120,
          "shadowColor": "#2C2A21",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.16,
          "shadowRadius": 4,
          "width": 120,
        }
      }
      transition={null}
      width={120}
    />
  </View>
</View>
`;

exports[`Story Snapshots: WithEdit should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "minHeight": 200,
      "padding": 24,
    }
  }
>
  <View
    accessibilityLabel="john.doe's avatar"
    accessible={true}
    style={
      [
        {
          "borderColor": "rgba(44,42,33,0.12)",
          "borderRadius": 37,
          "borderWidth": 0.5,
          "height": 120,
          "shadowColor": "#2C2A21",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.16,
          "shadowRadius": 4,
          "width": 120,
        },
        {
          "marginHorizontal": 10,
        },
      ]
    }
    testID="avatar"
  >
    <ViewManagerAdapter_ExpoImage
      borderColor={522988065}
      borderRadius={37}
      borderWidth={0.5}
      containerViewRef={{"current":"Object"}}
      contentFit="cover"
      contentPosition={
        {
          "left": "50%",
          "top": "50%",
        }
      }
      height={120}
      nativeViewRef={{"current":"NativeComponent"}}
      onError={[Function]}
      onLoad={[Function]}
      onLoadStart={[Function]}
      onProgress={[Function]}
      placeholder={[]}
      priority="high"
      shadowColor="#2C2A21"
      shadowOffset={
        {
          "height": 2,
          "width": 0,
        }
      }
      shadowOpacity={0.16}
      shadowRadius={4}
      source={
        [
          {
            "headers": undefined,
            "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=240",
          },
        ]
      }
      style={
        {
          "borderColor": "rgba(44,42,33,0.12)",
          "borderRadius": 37,
          "borderWidth": 0.5,
          "height": 120,
          "shadowColor": "#2C2A21",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.16,
          "shadowRadius": 4,
          "width": 120,
        }
      }
      transition={null}
      width={120}
    />
  </View>
  <RNGestureHandlerButton
    accessibilityLabel="Edit room photo"
    accessibilityRole="button"
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={-1}
    handlerType="NativeViewGestureHandler"
    hitSlop={
      {
        "bottom": 4,
        "left": 4,
        "right": 4,
        "top": 4,
      }
    }
    innerRef={null}
    onActiveStateChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      [
        {
          "backgroundColor": "#FFFDF6",
          "borderColor": "#E4D8BC",
          "borderRadius": 14,
          "borderWidth": 1.5,
          "height": undefined,
          "justifyContent": "center",
          "marginBottom": 0,
          "marginTop": 16,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        {
          "cursor": undefined,
        },
      ]
    }
    testID="avatar-edit-button"
    underlayColor="black"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 14,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#2C2A21",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontWeight": "700",
            "textAlign": "center",
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "600",
            "textAlign": "left",
          },
        ]
      }
    >
      Edit
    </Text>
  </RNGestureHandlerButton>
</View>
`;
